objects/Dealer_Division__c.object
<CustomObject>
    <description>list of active or inactive division, subdivision, zone, district and other territory related fields based on their business use for Sales, Service, Parts, etc.</description>
    <fields>
        <fullName>BuyFromDealerAccount_CD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to another account for buy/sell</description>
        <label>Buy From Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Dealer_Divisions_buyfromdeal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealerSubdivision_CD__c</fullName>
        <description>external key from B2C system to have both Dealer Number + Subdivision.</description>
        <externalId>true</externalId>
        <label>Dealer Subdivision</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealer_Access_Level__c</fullName>
        <label>Dealer Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>Reporting Only</fullName>
                    <default>true</default>
                    <label>Reporting Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Subdivision</relationshipLabel>
        <relationshipName>Dealer_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_URL__c</fullName>
        <label>Dealer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Division_CD__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_TXT__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name_TXT__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternetCertified_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Dealer_DreamShop_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dealer DreamShop Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_TXT__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Enrollment_Date__c</fullName>
        <label>Lead Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesDistrict_CD__c</fullName>
        <label>Sales District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRegion_CD__c</fullName>
        <label>Sales Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesZone_CD__c</fullName>
        <label>Sales Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDiv_TXT__c</fullName>
        <label>SubDivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealer Subdivision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Division_CD__c</columns>
        <columns>SubDiv_TXT__c</columns>
        <columns>SalesZone_CD__c</columns>
        <columns>SalesDistrict_CD__c</columns>
        <columns>DealerSubdivision_CD__c</columns>
        <columns>isActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dealers_with_Lead_Enrollment_False</fullName>
        <columns>CREATED_DATE</columns>
        <columns>isActive_FLG__c</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Dealer_Access_Level__c</columns>
        <columns>InternetCertified_FLG__c</columns>
        <columns>Division_CD__c</columns>
        <columns>SubDiv_TXT__c</columns>
        <columns>SalesZone_CD__c</columns>
        <columns>SalesDistrict_CD__c</columns>
        <columns>Is_Dealer_DreamShop_Active__c</columns>
        <columns>Lead_Enrollment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InternetCertified_FLG__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SubDiv_TXT__c</field>
            <operation>equals</operation>
            <value>Honda</value>
        </filters>
        <filters>
            <field>isActive_FLG__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Dealer_ID__c</field>
            <operation>notContain</operation>
            <value>service</value>
        </filters>
        <label>Dealers with Lead Enrollment False</label>
    </listViews>
    <listViews>
        <fullName>Honda_Auto_Dealer_Divisions</fullName>
        <columns>NAME</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Division_CD__c</columns>
        <columns>SubDiv_TXT__c</columns>
        <columns>SalesZone_CD__c</columns>
        <columns>SalesDistrict_CD__c</columns>
        <columns>DealerSubdivision_CD__c</columns>
        <columns>isActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division_CD__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>Honda Auto Dealer Divisions</label>
    </listViews>
    <listViews>
        <fullName>Powersports_Dealer_Divisions</fullName>
        <columns>NAME</columns>
        <columns>Dealer_ID__c</columns>
        <columns>Division_CD__c</columns>
        <columns>SubDiv_TXT__c</columns>
        <columns>SalesZone_CD__c</columns>
        <columns>SalesDistrict_CD__c</columns>
        <columns>DealerSubdivision_CD__c</columns>
        <columns>isActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division_CD__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <filters>
            <field>isActive_FLG__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Powersports Dealer Divisions</label>
    </listViews>
    <nameField>
        <displayFormat>DD-{0}</displayFormat>
        <label>Dealer Division Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Divisions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>